--- a/task-04.html
+++ b/task-04.html
@@ -5,15 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Task 4</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="css/common.css" />
   </head>
   <body>
     <p><a href="index.html">Go back</a></p>
 
     <div id="counter">
-      <button type="button" data-action="decrement">-1</button>
+      <button type="button" data-action="decrement" class="btn btn-success">-1</button>
       <span id="value">0</span>
-      <button type="button" data-action="increment">+1</button>
+      <button type="button" data-action="increment" class="btn btn-danger">+1</button>
     </div>
 
     <script src="js/task-04.js" type="module"></script>
