--- a/task-10.html
+++ b/task-10.html
@@ -6,17 +6,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Task 10 (optional)</title>
     <link rel="stylesheet" href="css/common.css" />
+    <style>
+      .box {
+        width: 30px;
+        height: 30px;
+        border: 1px pink dotted;
+        border-radius: 2px;
+        margin: 5px 2px;
+        text-align: center;
+        display: inline-block;
+      }
+      
+    </style>
   </head>
   <body>
     <p><a href="index.html">Go back</a></p>
 
     <div id="controls">
-      <input type="number" min="1" max="100" step="1" />
+      <input type="number" min="1" max="100" step="1" value="5"/>
       <button type="button" data-create>Create</button>
       <button type="button" data-destroy>Destroy</button>
     </div>
 
-    <div id="boxes"></div>
+    <div id="boxes">
+      <div style="width : 50px" class="box"> * </div>
+      <div  style="background: blue" class="box"> * </div>
+    </div>
 
     <script src="js/task-10.js" type="module"></script>
   </body>
